src/test/deca/context/invalid/provided/13_invalid_print_boolean.deca
{
    boolean b;
    b = false;

    // Interdit : print(b) ou println(b), 
    // car on ne peut pas imprimer un boolean.
    println(b);

    println("Ne devrait jamais s'afficher");
}
